--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,2 @@
 - date: 01. Octorber 2018
-  headline: Welcome — <b> My homepage is officially starting</b>!
+  headline: Welcome — <b> Baifeng's homepage is officially starting</b>!
