--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -11,8 +11,8 @@
 
 - name: "This could be you !"
   photo: rock.jpg
-  info: See <a href="http://www.allanlab.org/vacancies">openings</a> for more info
-  email: milan.allan@gmail.com
+  info: See <a href="https://zhangbaifeng.github.io/vacancies">openings</a> for more info
+  email: zhangbaifeng1@gmail.com
   number_educ: 0
   education1:
   education2:
