--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,9 +1,9 @@
 - name: Baifeng Zhang
-  photo: Milan.jpg
+  photo: photo_self.jpg
   info: Research Assistant, started April 2018
   email: zhangbaifeng1@gmail.com
   number_educ: 5
-  education1: B.E. in Bioengineering, Diplomarbeit with <a href="https://scholar.google.com/citations?user=aPZlMNkAAAAJ&hl=zh-CN">J Xiaojun Yan</a>, Ningbo University
+  education1: B.E. in Bioengineering, Diplomarbeit with <a href="https://scholar.google.com/citations?user=aPZlMNkAAAAJ&hl=zh-CN">Xiaojun Yan</a>, Ningbo University
   education2: Bioinformatics Engineer with <a href="https://www.bgi.com/global/">Xiaodong Fang</a> and <a href="https://www.researchgate.net/profile/Xiangchun_Li">Xiangchun Li</a>
   education3: Research Assistant with <a href="https://ki.se/en/research/zongli-zheng/">Zongli Zheng</a> at Karonlinska Institutet
   education4: 
