--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -49,7 +49,7 @@
   news2: 
 
 - title: "A novel assay for rapid detection of microcystin mcyG gene: loop-mediated isothermal amplification"
-  image: lamp.jpg
+  image: lamp.png
   description: "We designed a set of LAMP primers to target the sequence of the mcyG gene, which is responsible for the first step in the biosynthesis of Adda (3-amino-9-methoxy-2, 6, 8-trim ethyl-10-phenyldeca-4, 6-dienoic acid), an important part of microcystin."
   authors: ZHANG Baifeng , ZHU Peng , YAN Xiaojun, DANG Chenyang, LV Yating ,WU Jinghua
   link:
