--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,4 +2,4 @@
   headline: "Welcome — <b> Baifeng's homepage is officially starting</b>!"
 
 - date: 18. March 2019
-  headline: "<b> Congratulation! Baifeng's first paper on clonal evolution</b> <a href='https://www.nature.com/articles/s41467-019-09241-7'>is published in Nature Communications</a>! <img src='/images/newspic/2news.png' class='img-responsive' style='max-width: 192px' />"
+  headline: "Congratulation! <b>Baifeng's first paper on clonal evolution</b> <a href='https://www.nature.com/articles/s41467-019-09241-7'>is published in Nature Communications</a>! <img src='/images/newspic/2news.png' class='img-responsive' style='max-width: 192px' />"
