--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -35,7 +35,7 @@
   authors: Yi Huang, Jiayin Wang, Peilin Jia, Xiangchun Li, Guangsheng Pei , Changxi Wang, Xiaodong Fang, Zhongming Zhao, Zhiming Cai, Xin Yi, Song Wu, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*</a>
   link:
     url: https://www.nature.com/articles/s41467-019-09241-7
-    display:  Nature Communicationsvolume 10, 1245 (2019)
+    display:  Nature Communications 10, 1245 (2019)
   highlight: 1
   news2:
 
