--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 - date: 01. Octorber 2018
   headline: "Welcome — <b> Baifeng's homepage is officially starting</b>!"
 
+- date : 07-09. November 2018
+  headline: "Baifeng is invited to give a short talk on <b>SplitFusion software</b> in <a href='http://ias.ust.hk/events/201811nttag/'>New Technologies and Translational Applications in Genomics international conference hosted by HKUST IAS (November 7-9)</a>"
+
 - date: 18. March 2019
   headline: "Congratulation! <b>Baifeng's first paper on clonal evolution</b> <a href='https://www.nature.com/articles/s41467-019-09241-7'>is published in Nature Communications</a>! <img src='/images/newspic/2news.png' class='img-responsive' style='max-width: 192px' />"
