--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -14,8 +14,8 @@
   description: "The detection of differentially methylated regions (DMRs) and DMRs annotation, the correlation analysis between DMRs and gene expression/splice site/transcript factor site, to study the effect of epigenetic modifications in ovarian cancer tumorigenesis."
   authors: Fangfang Song*, Lian Li*, <a style="color:#FF0000; text-decoration:underline">Baifang Zhang*</a>, Hong Zheng, Meng Yang, Xiangchun Li, Jing Tian, Qinghua Wang, Wei Zhang, Kexin Chen
   link:
-    url:
-    display:  Under Review on Clinical Epigenetics
+    url: https://www.sciencedirect.com/science/article/pii/S0090825820309884
+    display:  In press on Gynecologic Oncology
   highlight: 1
   news2:
 
