--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 01. May 2020
+  headline: "Congratulation! <b>Baifeng's co-firsted paper on chinese HGSOC omics study</b> <a href='https://www.sciencedirect.com/science/article/pii/S0090825820309884'>is in press in Gynecologic Oncology</a>!"  
+
 - date: 01. June 2019
   headline: "Congratulation! — Baifeng's wechat blog (<b>ID: CancerEvolution</b>) on cancer evolution and immune evasion  is officially starting!"
 
