--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,15 @@
+- date: 23. August 2021
+  headline: "Congratulation! <b>Baifeng's the first-authored paper on mutational signature anlaysis of HCC patients</b> <a href='https://hrjournal.net/article/view/4278'>is published in Hepatoma Research</a>!"
+
+- date: 09. March 2021
+  headline: "Congratulation! <b>Baifeng's co-authored paper on scRNAseq of Chinese NPC patients</b> <a href='https://www.nature.com/articles/s41467-021-21795-z'>is published in Nature Communications</a>!"
+
+- date: 01. January 2021
+  headline: "Congratulation! <b>Baifeng is admitted by Department of Clinical Oncology in Li Ka Shing Faculty of Medicine, The University of Hong Kong (HKUMed) and start his Ph.D. study under the supervision of Prof. Xinyuan Guan and Prof. Dora Lai-wan KWONG</b>"
+
+- date: 01. August 2020
+  headline: "Congratulation! <b>Baifeng's co-first authored paper on SplitFusion software</b> <a href='https://www.researchsquare.com/article/rs-39138/v1'>is posted in Research Square and under review in Nature Biomedical Engineering</a>!"  
+
 - date: 01. May 2020
   headline: "Congratulation! <b>Baifeng's co-first authored paper on chinese HGSOC omics study</b> <a href='https://www.sciencedirect.com/science/article/pii/S0090825820309884'>is in press in Gynecologic Oncology</a>!"  
 
