--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -2,8 +2,8 @@
   image: hr.png
   description: "This study found racial differences of mutational signatures to be associated with differences in diverse genetic backgrounds and environmental factors, which might help guide the personalized treatment of HCC patients."
   authors: <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*</a>, Xinyuan Guan#
-    url:
-    display:  Hepatoma Research
+    url: https://hrjournal.net/article/view/4278
+    display: Hepatoma Research
   highlight: 1
   news2:
   
@@ -12,7 +12,7 @@
   description: "Single-cell RNA sequencing to 66,627 cells from 14 patients, integrated with clonotype identification on T and B cells."
   authors: Lanqi Gong, Dora Lai-Wan Kwong, Wei Dai, Pingan Wu, Shanshan Li, Qian Yan, Yu Zhang, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang</a>, Xiaona Fang, Li Liu, Min Luo, Beilei Liu, Larry Ka-Yue Chow, Qingyun Chen, Jinlin Huang, Victor Ho-Fun Lee, Ka-On Lam, Anthony Wing-Ip Lo, Zhiwei Chen, Yan Wang, Anne Wing-Mui Lee & Xinyuan Guan#
     url: https://www.nature.com/articles/s41467-021-21795-z
-    display:  Nature Communications 12, 1540 (2021)
+    display: Nature Communications 12, 1540 (2021)
   highlight: 1
   news2:
   
@@ -22,7 +22,7 @@
   authors: <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*</a>, Zhengbo Song*</a>, Chloe Yufan Bao*</a>, Chunwei Xu*</a>, Wenxian Wang, Hoi Yee Chu, Chenyu Lu, Hongxiang Wang, Siyu Bao, Zhenyu Gong, Hoi Yee Keung, Maggie Chow, Yiping Zhang, Wah Cheuk, Mengsu Yang, William Cho#, Juxiang Chen#, Zongli Zheng#
   link:
     url: https://www.researchsquare.com/article/rs-39138/v1
-    display:  Research Square
+    display: Research Square
   highlight: 1
   news2:
 
@@ -42,7 +42,7 @@
   authors: Yi Huang, Changxi Wang, Jiayin Wang, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang</a>, Jiajia Cai, Dan Shen, Xin Yi, Zhiming Cai, and Song Wu#
   link:
     url:
-    display:  Under review on Clinical Cancer Research
+    display: Under review on Clinical Cancer Research
   highlight: 1
   news2:
 
@@ -52,7 +52,7 @@
   authors: Yi Huang*, Jiayin Wang*, Peilin Jia, Xiangchun Li, Guangsheng Pei , Changxi Wang, Xiaodong Fang, Zhongming Zhao, Zhiming Cai, Xin Yi, Song Wu, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*#</a>
   link:
     url: https://www.nature.com/articles/s41467-019-09241-7
-    display:  Nature Communications 10, 1245 (2019)
+    display: Nature Communications 10, 1245 (2019)
   highlight: 1
   news2:
 
@@ -62,7 +62,7 @@
   authors: X.C. Li, M.Y. Wang, M. Yang, H.J. Dai, <a style="color:#FF0000; text-decoration:underline">B.F. Zhang</a>, W. Wang, X.L. Chu, X. Wang, H. Zheng, R.F. Niu, W. Zhang, K.X. Chen#
   link:
     url: https://doi.org/10.1093/annonc/mdy011
-    display:  Annals of Oncology 29, 4 (2018)
+    display: Annals of Oncology 29, 4 (2018)
   highlight: 1
   news2:
 
