--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -2,6 +2,7 @@
   image: hr.png
   description: "This study found racial differences of mutational signatures to be associated with differences in diverse genetic backgrounds and environmental factors, which might help guide the personalized treatment of HCC patients."
   authors: <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*</a>, Xinyuan Guan#
+  link:
     url: https://hrjournal.net/article/view/4278
     display: Hepatoma Research
   highlight: 1
@@ -11,6 +12,7 @@
   image: npc.png
   description: "Single-cell RNA sequencing to 66,627 cells from 14 patients, integrated with clonotype identification on T and B cells."
   authors: Lanqi Gong, Dora Lai-Wan Kwong, Wei Dai, Pingan Wu, Shanshan Li, Qian Yan, Yu Zhang, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang</a>, Xiaona Fang, Li Liu, Min Luo, Beilei Liu, Larry Ka-Yue Chow, Qingyun Chen, Jinlin Huang, Victor Ho-Fun Lee, Ka-On Lam, Anthony Wing-Ip Lo, Zhiwei Chen, Yan Wang, Anne Wing-Mui Lee & Xinyuan Guan#
+  link:
     url: https://www.nature.com/articles/s41467-021-21795-z
     display: Nature Communications 12, 1540 (2021)
   highlight: 1
