--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,7 +1,7 @@
 - title: "Racial difference of mutational signature in hepatocellular carcinoma"
   image: hr.png
   description: "This study found racial differences of mutational signatures to be associated with differences in diverse genetic backgrounds and environmental factors, which might help guide the personalized treatment of HCC patients."
-  authors: <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*, Xinyuan Guan
+  authors: <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*</a>, Xinyuan Guan#
   link:
     url: https://hrjournal.net/article/view/4278
     display: Hepatoma Research
@@ -11,7 +11,7 @@
 - title: "Comprehensive single-cell sequencing reveals the stromal dynamics and tumor-specific characteristics in the microenvironment of nasopharyngeal carcinoma"
   image: npc.png
   description: "Single-cell RNA sequencing to 66,627 cells from 14 patients, integrated with clonotype identification on T and B cells."
-  authors: Lanqi Gong, Dora Lai-Wan Kwong, Wei Dai, Pingan Wu, Shanshan Li, Qian Yan, Yu Zhang, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*, Xiaona Fang, Li Liu, Min Luo, Beilei Liu, Larry Ka-Yue Chow, Qingyun Chen, Jinlin Huang, Victor Ho-Fun Lee, Ka-On Lam, Anthony Wing-Ip Lo, Zhiwei Chen, Yan Wang, Anne Wing-Mui Lee & Xinyuan Guan
+  authors: Lanqi Gong, Dora Lai-Wan Kwong, Wei Dai, Pingan Wu, Shanshan Li, Qian Yan, Yu Zhang, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*</a>, Xiaona Fang, Li Liu, Min Luo, Beilei Liu, Larry Ka-Yue Chow, Qingyun Chen, Jinlin Huang, Victor Ho-Fun Lee, Ka-On Lam, Anthony Wing-Ip Lo, Zhiwei Chen, Yan Wang, Anne Wing-Mui Lee & Xinyuan Guan#
   link:
     url: https://www.nature.com/articles/s41467-021-21795-z
     display: Nature Communications 12, 1540 (2021)
@@ -21,7 +21,7 @@
 - title: "Ultrasensitive gene fusion detection reveals fusion variant associated tumor heterogeneity"
   image: splitfusion.png
   description: "A companion data analysis platform named SplitFusion, to detect gene fusion based on split alignments, such as reads crossing fusion breakpoints, with the ability to accurately infer in-frame or out-of-frame of fusion partners of a given fusion candidate. SplitFusion also outputs example breakpoint-supporting sequences in FASTA format, allowing for further investigations. SplitFusion can economically and effectively distinguish true oncogenic fusions from environment noise, amplification or sequencing errors, especially for low quality input of clinical samples."
-  authors: <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*, Zhengbo Song*, Chloe Yufan Bao*, Chunwei Xu*, Wenxian Wang, Hoi Yee Chu, Chenyu Lu, Hongxiang Wang, Siyu Bao, Zhenyu Gong, Hoi Yee Keung, Maggie Chow, Yiping Zhang, Wah Cheuk, Mengsu Yang, William Cho, Juxiang Chen, Zongli Zheng
+  authors: <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*</a>, Zhengbo Song*, Chloe Yufan Bao*, Chunwei Xu*, Wenxian Wang, Hoi Yee Chu, Chenyu Lu, Hongxiang Wang, Siyu Bao, Zhenyu Gong, Hoi Yee Keung, Maggie Chow, Yiping Zhang, Wah Cheuk, Mengsu Yang, William Cho, Juxiang Chen, Zongli Zheng#
   link:
     url: https://www.researchsquare.com/article/rs-39138/v1
     display: Research Square
@@ -31,7 +31,7 @@
 - title: "Tumor specific methylome in Chinese high-grade serous ovarian cancer characterized by gene expression profile and tumor genotype"
   image: landscape.png
   description: "The detection of differentially methylated regions (DMRs) and DMRs annotation, the correlation analysis between DMRs and gene expression/splice site/transcript factor site, to study the effect of epigenetic modifications in ovarian cancer tumorigenesis."
-  authors: Fangfang Song*, Lian Li*, <a style="color:#FF0000; text-decoration:underline">Baifang Zhang*, Hong Zheng, Meng Yang, Xiangchun Li, Jing Tian, Qinghua Wang, Wei Zhang, Kexin Chen
+  authors: Fangfang Song*, Lian Li*, <a style="color:#FF0000; text-decoration:underline">Baifang Zhang*</a>, Hong Zheng, Meng Yang, Xiangchun Li, Jing Tian, Qinghua Wang, Wei Zhang, Kexin Chen#
   link:
     url: https://www.sciencedirect.com/science/article/pii/S0090825820309884
     display: Gynecologic Oncology
@@ -41,7 +41,7 @@
 - title: "Prognostic and therapeutic relevance of genomic features in clear cell renal cell carcinomas without 3p and 5q copy number alterations"
   image: circos-example.png
   description: "The personalized analysis of the project including the detection of somatic structure variants, false positive results filter, SV cluster chain identification, result interpretation, and pan-cancer integrated analysis of TCGA database."
-  authors: Yi Huang, Changxi Wang, Jiayin Wang, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang, Jiajia Cai, Dan Shen, Xin Yi, Zhiming Cai, and Song Wu
+  authors: Yi Huang, Changxi Wang, Jiayin Wang, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang</a>, Jiajia Cai, Dan Shen, Xin Yi, Zhiming Cai, and Song Wu#
   link:
     url:
     display: Under review on Clinical Cancer Research
@@ -51,7 +51,7 @@
 - title: "Clonal architectures predict clinical outcome in clear cell renal cell carcinoma"
   image: cancer_evolution.png
   description: "The clonal evolution structure and immunogenicity analysis of 489 clear cell renal carcinomas patients from Japanese/Chinese/TCGA cohorts, including mutational signature analysis, intra-tumor heterogeneity and cancer evolution history analysis, tumor specific neo-antigen analysis, survival analysis."
-  authors: Yi Huang*, Jiayin Wang*, Peilin Jia, Xiangchun Li, Guangsheng Pei , Changxi Wang, Xiaodong Fang, Zhongming Zhao, Zhiming Cai, Xin Yi, Song Wu, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*
+  authors: Yi Huang*, Jiayin Wang*, Peilin Jia, Xiangchun Li, Guangsheng Pei , Changxi Wang, Xiaodong Fang, Zhongming Zhao, Zhiming Cai, Xin Yi, Song Wu, <a style="color:#FF0000; text-decoration:underline">Baifeng Zhang*#</a>
   link:
     url: https://www.nature.com/articles/s41467-019-09241-7
     display: Nature Communications 10, 1245 (2019)
@@ -61,7 +61,7 @@
 - title: "A mutational signature associated with alcohol consumption and prognostically significantly mutated driver genes in esophageal squamous cell carcinoma"
   image: signature.png
   description: "We have uncovered several new SMGs in ESCC and defined an alcohol consumption related mutational signature. TENM3 mutations and the TP53 hotspot mutation p.R213* are independent prognosticators for poor survival in ESCC."
-  authors: X.C. Li, M.Y. Wang, M. Yang, H.J. Dai, <a style="color:#FF0000; text-decoration:underline">B.F. Zhang, W. Wang, X.L. Chu, X. Wang, H. Zheng, R.F. Niu, W. Zhang, K.X. Chen
+  authors: X.C. Li, M.Y. Wang, M. Yang, H.J. Dai, <a style="color:#FF0000; text-decoration:underline">B.F. Zhang</a>, W. Wang, X.L. Chu, X. Wang, H. Zheng, R.F. Niu, W. Zhang, K.X. Chen#
   link:
     url: https://doi.org/10.1093/annonc/mdy011
     display: Annals of Oncology 29, 4 (2018)
@@ -71,7 +71,7 @@
 - title: "A novel assay for rapid detection of microcystin mcyG gene: loop-mediated isothermal amplification"
   image: lamp.png
   description: "We designed a set of LAMP primers to target the sequence of the mcyG gene, which is responsible for the first step in the biosynthesis of Adda (3-amino-9-methoxy-2, 6, 8-trim ethyl-10-phenyldeca-4, 6-dienoic acid), an important part of microcystin."
-  authors: <a style="color:#FF0000; text-decoration:underline">ZHANG Baifeng, ZHU Peng, YAN Xiaojun, DANG Chenyang, LV Yating ,WU Jinghua
+  authors: <a style="color:#FF0000; text-decoration:underline">ZHANG Baifeng</a>, ZHU Peng#, YAN Xiaojun, DANG Chenyang, LV Yating ,WU Jinghua
   link:
     url: https://doi.org/10.5846/stxb201308112059
     display: Acta Ecologica Sinica 35, 9 (2015)
@@ -82,7 +82,7 @@
   description:
     We designed a new loop-mediated isothermal amplification (LAMP) assay based on microcystin biosynthesis genes, which allowed the workers, through routine monitoring of potential toxin status in the freshwater, to have enough time to implement a series of control strategies for avoiding human exposure to cyanobacterial hepatotoxins at dangerous levels.
   authors:
-    Peng Zhu*, <a style="color:#FF0000; text-decoration:underline">Bai-Feng Zhang*, Jing-Hua Wu, Chen-Yang Dang, Ya-Ting Lv, Jian-Zhong Fan, Xiao-Jun Yan
+    Peng Zhu*, <a style="color:#FF0000; text-decoration:underline">Bai-Feng Zhang*</a>, Jing-Hua Wu, Chen-Yang Dang, Ya-Ting Lv, Jian-Zhong Fan, Xiao-Jun Yan#
   link:
     url: https://doi.org/10.1016/j.hal.2014.04.018
     display: Harmful Algae 37, 8–16 (2014)
