--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: 26. November 2022
+  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled A prognostic risk model for glioma patients by systematic evaluation of genomic variations</b> <a href='https://doi.org/10.1016/j.isci.2022.105681'>is in press in iScience</a>!"
+
+- date: 29. September 2022
+  headline: "Congratulation! <b>Baifeng's the co-authored paper entitled Long non-coding RNA NEAT1 mediated RPRD1B stability facilitates fatty acid metabolism and lymph node metastasis via c-Jun/c-Fos/SREBP1 axis in gastric cancer</b> <a href='https://doi.org/10.1186/s13046-022-02449-4'>is published in Journal of Experimental & Clinical Cancer Research</a>!"
+
+- date: 25. May 2022
+  headline: "Congratulation! <b>Baifeng's the co-authored paper entitled Targeting TROY-mediated P85a/AKT/TBX3 signaling attenuates tumor stemness and elevates treatment response in hepatocellular carcinoma</b> <a href='https://doi.org/10.1186/s13046-022-02401-6'>is published in Journal of Experimental & Clinical Cancer Research</a>!"
+
 - date: 23. August 2021
   headline: "Congratulation! <b>Baifeng's the first-authored paper on mutational signature anlaysis of HCC patients</b> <a href='https://hrjournal.net/article/view/4278'>is published in Hepatoma Research</a>!"
 
