--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,12 +1,12 @@
 - name: Baifeng Zhang
   photo: photo_self.jpg
-  info: Research Assistant, started April 2018
+  info: PhD candidate, started Jan 2021
   email: zhangbaifeng1@gmail.com
   number_educ: 5
   education1: B.E. in Bioengineering, Diplomarbeit with <a href="https://scholar.google.com/citations?user=aPZlMNkAAAAJ&hl=zh-CN">Xiaojun Yan</a>, Ningbo University
   education2: Bioinformatics Engineer with <a href="https://www.bgi.com/global/">Xiaodong Fang</a> and <a href="https://www.researchgate.net/profile/Xiangchun_Li">Xiangchun Li</a>
   education3: Research Assistant with <a href="https://ki.se/en/research/zongli-zheng/">Zongli Zheng</a> at Karonlinska Institutet
-  education4: 
+  education4: PhD candidate with Prof. Xinyuan Guan and Prof. Dora Lai-wan KWONG at Department of Clinical Oncology, SClinMed, HKUMed
   education5: 
 
 - name: "This could be you !"
