--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -6,7 +6,7 @@
   education1: B.E. in Bioengineering, Diplomarbeit with <a href="https://scholar.google.com/citations?user=aPZlMNkAAAAJ&hl=zh-CN">Xiaojun Yan</a>, Ningbo University
   education2: Bioinformatics Engineer with <a href="https://www.bgi.com/global/">Xiaodong Fang</a> and <a href="https://www.researchgate.net/profile/Xiangchun_Li">Xiangchun Li</a>
   education3: Research Assistant with <a href="https://ki.se/en/research/zongli-zheng/">Zongli Zheng</a> at Karonlinska Institutet
-  education4: PhD candidate with <a href="https://www.oncology.hku.hk/en/Our-Team/Academic-Staff/Professor-Xin-yuan-GUAN/Professor-Xin-yuan-GUAN-Profile">Prof. Xinyuan Guan (academia)</a> and <a href="https://www.oncology.hku.hk/en/Our-Team/Academic-Staff/Professor-Dora-Lai-wan-KWONG/Professor-Dora-Lai-wan-KWONG-Profile">Prof. Dora Lai-wan KWONG (clinical)</a> at Department of Clinical Oncology, SClinMed, HKUMed
+  education4: PhD candidate with <a href="https://www.oncology.hku.hk/en/Our-Team/Academic-Staff/Professor-Xin-yuan-GUAN/Professor-Xin-yuan-GUAN-Profile">Prof. Xinyuan Guan (academical)</a> and <a href="https://www.oncology.hku.hk/en/Our-Team/Academic-Staff/Professor-Dora-Lai-wan-KWONG/Professor-Dora-Lai-wan-KWONG-Profile">Prof. Dora Lai-wan KWONG (clinical)</a> at Department of Clinical Oncology, SClinMed, HKUMed
   education5: 
 
 - name: "This could be you !"
