--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -3,7 +3,7 @@
   info: PhD candidate, started Jan 2021
   email: zhangbaifeng1@gmail.com
   number_educ: 5
-  education1: PhD candidate with <a href="https://www.oncology.med.hku.hk/en/Our-Team/Academic-Staff/Professor-Xin-yuan-GUAN/Professor-Xin-yuan-GUAN-Profile">Prof. Xinyuan Guan (academical)</a> and <a href="https://www.oncology.med.hku.hk/en/Our-Team/Academic-Staff/Professor-Dora-Lai-wan-KWONG/Professor-Dora-Lai-wan-KWONG-Profile">Prof. Dora Lai-wan KWONG (clinical)</a> at Department of Clinical Oncology, SClinMed, HKUMed
+  education1: PhD candidate with <a href="https://hub.hku.hk/cris/rp/rp00454">Prof. Xinyuan Guan (academical)</a> and <a href="https://hub.hku.hk/cris/rp/rp00414">Prof. Dora Lai-wan KWONG (clinical)</a> at Department of Clinical Oncology, SClinMed, HKUMed
   education2: Research Assistant with <a href="https://ki.se/en/research/zongli-zheng/">Zongli Zheng</a> at Karonlinska Institutet
   education3: Bioinformatics Engineer with <a href="https://www.bgi.com/global/">Xiaodong Fang</a> and <a href="https://www.researchgate.net/profile/Xiangchun_Li">Xiangchun Li</a>
   education4: B.E. in Bioengineering, Diplomarbeit with <a href="https://scholar.google.com/citations?user=aPZlMNkAAAAJ&hl=zh-CN">Xiaojun Yan</a>, Ningbo University
