--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 10. December 2022
+  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled Integrated analysis of racial disparities in genomic architecture identifies a trans-ancestry prognostic subtype in bladder cancer</b> <a href='https://doi.org/10.1002/1878-0261.13360'>is in press in Molecular Oncology</a>!"
+
 - date: 26. November 2022
   headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled A prognostic risk model for glioma patients by systematic evaluation of genomic variations</b> <a href='https://doi.org/10.1016/j.isci.2022.105681'>is in press in iScience</a>!"
 
@@ -17,7 +20,7 @@
   headline: "Congratulation! <b>Baifeng is admitted by Department of Clinical Oncology in Li Ka Shing Faculty of Medicine, The University of Hong Kong (HKUMed) and start his Ph.D. study under the supervision of Prof. Xinyuan Guan and Prof. Dora Lai-wan KWONG</b>"
 
 - date: 01. August 2020
-  headline: "Congratulation! <b>Baifeng's co-first authored paper on SplitFusion software</b> <a href='https://www.researchsquare.com/article/rs-39138/v1'>is posted in Research Square and under review in Nature Biomedical Engineering</a>!"  
+  headline: "Congratulation! <b>Baifeng's the first-authored paper on SplitFusion software</b> <a href='https://www.researchsquare.com/article/rs-39138/v1'>is posted in Research Square and under review in Nature Biomedical Engineering</a>!"  
 
 - date: 01. May 2020
   headline: "Congratulation! <b>Baifeng's co-first authored paper on chinese HGSOC omics study</b> <a href='https://www.sciencedirect.com/science/article/pii/S0090825820309884'>is in press in Gynecologic Oncology</a>!"  
@@ -26,7 +29,7 @@
   headline: "Congratulation! — Baifeng's wechat blog (<b>ID: CancerEvolution</b>) on cancer evolution and immune evasion  is officially starting!"
 
 - date: 18. March 2019
-  headline: "Congratulation! <b>Baifeng's first paper on clonal evolution</b> <a href='https://www.nature.com/articles/s41467-019-09241-7'>is published in Nature Communications</a>! <img src='/images/newspic/2news.png' class='img-responsive' style='max-width: 192px' />"  
+  headline: "Congratulation! <b>Baifeng's the correponding-authored paper on clonal evolution</b> <a href='https://www.nature.com/articles/s41467-019-09241-7'>is published in Nature Communications</a>! <img src='/images/newspic/2news.png' class='img-responsive' style='max-width: 192px' />"  
 
 - date : 07-09. November 2018
   headline: "Baifeng is invited to give a short talk on <b>SplitFusion software</b> in <a href='http://ias.ust.hk/events/201811nttag/'>New Technologies and Translational Applications in Genomics international conference hosted by HKUST IAS (November 7-9)</a>"
