--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,8 +1,11 @@
+- date: 12. January 2023
+  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Single-Cell Transcriptomic Analysis of Primary and Metastatic Tumor Ecosystems in Esophageal Squamous Cell Carcinoma</b> <a href='https://onlinelibrary.wiley.com/journal/21983844'>is in press in Advanced Science</a>!"
+
 - date: 10. December 2022
-  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled Integrated analysis of racial disparities in genomic architecture identifies a trans-ancestry prognostic subtype in bladder cancer</b> <a href='https://doi.org/10.1002/1878-0261.13360'>is in press in Molecular Oncology</a>!"
+  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled Integrated analysis of racial disparities in genomic architecture identifies a trans-ancestry prognostic subtype in bladder cancer</b> <a href='https://doi.org/10.1002/1878-0261.13360'>is published in Molecular Oncology</a>!"
 
 - date: 26. November 2022
-  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled A prognostic risk model for glioma patients by systematic evaluation of genomic variations</b> <a href='https://doi.org/10.1016/j.isci.2022.105681'>is in press in iScience</a>!"
+  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled A prognostic risk model for glioma patients by systematic evaluation of genomic variations</b> <a href='https://doi.org/10.1016/j.isci.2022.105681'>is published in iScience</a>!"
 
 - date: 29. September 2022
   headline: "Congratulation! <b>Baifeng's the co-authored paper entitled Long non-coding RNA NEAT1 mediated RPRD1B stability facilitates fatty acid metabolism and lymph node metastasis via c-Jun/c-Fos/SREBP1 axis in gastric cancer</b> <a href='https://doi.org/10.1186/s13046-022-02449-4'>is published in Journal of Experimental & Clinical Cancer Research</a>!"
