--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
-- date: 12. January 2023
-  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Single-Cell Transcriptomic Analysis of Primary and Metastatic Tumor Ecosystems in Esophageal Squamous Cell Carcinoma</b> <a href='https://onlinelibrary.wiley.com/journal/21983844'>is in press in Advanced Science</a>!"
+- date: 29. January 2023
+  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Single-Cell Transcriptomic Analysis of Primary and Metastatic Tumor Ecosystems in Esophageal Squamous Cell Carcinoma</b> <a href='https://doi.org/10.1002/advs.202204565'>is in published in Advanced Science</a>!"
 
 - date: 10. December 2022
   headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled Integrated analysis of racial disparities in genomic architecture identifies a trans-ancestry prognostic subtype in bladder cancer</b> <a href='https://doi.org/10.1002/1878-0261.13360'>is published in Molecular Oncology</a>!"
