--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,9 @@
 - date: 29. January 2023
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Single-Cell Transcriptomic Analysis of Primary and Metastatic Tumor Ecosystems in Esophageal Squamous Cell Carcinoma</b> <a href='https://doi.org/10.1002/advs.202204565'>is in published in Advanced Science</a>!"
 
+- date: 24. January 2023
+  headline: "Congratulation! <b>Baifeng's the co-authored paper entitled Enhanced mitophagy driven by ADAR1-GLI1 editing supports the self-renewal of cancer stem cells in hepatocellular carcinoma</b> <a href='https://doi.org/10.1097/hep.0000000000000299'>is in published in Hepatology</a>!"
+
 - date: 10. December 2022
   headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled Integrated analysis of racial disparities in genomic architecture identifies a trans-ancestry prognostic subtype in bladder cancer</b> <a href='https://doi.org/10.1002/1878-0261.13360'>is published in Molecular Oncology</a>!"
 
