--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 14. August 2023
+  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Targeting MFGE8 secreted by cancer-associated fibroblasts blocks angiogenesis and metastasis in esophageal squamous cell carcinoma</b> <a href=''>is accepted by PNAS</a>!"
+
 - date: 29. January 2023
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Single-Cell Transcriptomic Analysis of Primary and Metastatic Tumor Ecosystems in Esophageal Squamous Cell Carcinoma</b> <a href='https://doi.org/10.1002/advs.202204565'>is published in Advanced Science</a>!"
 
