--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,12 @@
 - date: 14. August 2023
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Targeting MFGE8 secreted by cancer-associated fibroblasts blocks angiogenesis and metastasis in esophageal squamous cell carcinoma</b> <a href=''>is accepted by PNAS</a>!"
 
+- date : 14-16. June 2023
+  headline: "Baifeng is invited to give a short talk on <b>Metastatic microenvironment of ESCC</b> in <a href='http://ias.ust.hk/events/202306bam/program.php'>IAS International Workshop on Biological data science, AI & Medicine (BAM workshop) hosted by HKUST IAS (June 14-16)</a>"
+
+- date : 14-19. April 2023
+  headline: "Baifeng is selected for poster presentation on <b>Pan-cancer single-cell analysis reveals the interactions of SPP1+MMP12+ macrophages with metastasis-initiating cells that drives metastasis</b> in <a href='https://aacrjournals.org/cancerres/article/83/7_Supplement/4699/722703/Abstract-4699-Pan-cancer-single-cell-analysis'>AACR Annual Meeting 2023 in Orlando, Florida (April 14-19)</a>"
+
 - date: 29. January 2023
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Single-Cell Transcriptomic Analysis of Primary and Metastatic Tumor Ecosystems in Esophageal Squamous Cell Carcinoma</b> <a href='https://doi.org/10.1002/advs.202204565'>is published in Advanced Science</a>!"
 
@@ -8,10 +14,10 @@
   headline: "Congratulation! <b>Baifeng's the co-authored paper entitled Enhanced mitophagy driven by ADAR1-GLI1 editing supports the self-renewal of cancer stem cells in hepatocellular carcinoma</b> <a href='https://doi.org/10.1097/hep.0000000000000299'>is published in Hepatology</a>!"
 
 - date: 10. December 2022
-  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled Integrated analysis of racial disparities in genomic architecture identifies a trans-ancestry prognostic subtype in bladder cancer</b> <a href='https://doi.org/10.1002/1878-0261.13360'>is published in Molecular Oncology</a>!"
+  headline: "Congratulation! <b>Baifeng's the corresponding-authored paper entitled Integrated analysis of racial disparities in genomic architecture identifies a trans-ancestry prognostic subtype in bladder cancer</b> <a href='https://doi.org/10.1002/1878-0261.13360'>is published in Molecular Oncology</a>!"
 
 - date: 26. November 2022
-  headline: "Congratulation! <b>Baifeng's the correponding-authored paper entitled A prognostic risk model for glioma patients by systematic evaluation of genomic variations</b> <a href='https://doi.org/10.1016/j.isci.2022.105681'>is published in iScience</a>!"
+  headline: "Congratulation! <b>Baifeng's the corresponding-authored paper entitled A prognostic risk model for glioma patients by systematic evaluation of genomic variations</b> <a href='https://doi.org/10.1016/j.isci.2022.105681'>is published in iScience</a>!"
 
 - date: 29. September 2022
   headline: "Congratulation! <b>Baifeng's the co-authored paper entitled Long non-coding RNA NEAT1 mediated RPRD1B stability facilitates fatty acid metabolism and lymph node metastasis via c-Jun/c-Fos/SREBP1 axis in gastric cancer</b> <a href='https://doi.org/10.1186/s13046-022-02449-4'>is published in Journal of Experimental & Clinical Cancer Research</a>!"
@@ -32,13 +38,13 @@
   headline: "Congratulation! <b>Baifeng's the first-authored paper on SplitFusion software</b> <a href='https://www.researchsquare.com/article/rs-39138/v1'>is posted in Research Square and under review in Nature Biomedical Engineering</a>!"  
 
 - date: 01. May 2020
-  headline: "Congratulation! <b>Baifeng's co-first authored paper on chinese HGSOC omics study</b> <a href='https://www.sciencedirect.com/science/article/pii/S0090825820309884'>is in press in Gynecologic Oncology</a>!"  
+  headline: "Congratulation! <b>Baifeng's co-first authored paper on chinese HGSOC omics study</b> <a href='https://www.sciencedirect.com/science/article/pii/S0090825820309884'>is published in Gynecologic Oncology</a>!"  
 
 - date: 01. June 2019
   headline: "Congratulation! — Baifeng's wechat blog (<b>ID: CancerEvolution</b>) on cancer evolution and immune evasion  is officially starting!"
 
 - date: 18. March 2019
-  headline: "Congratulation! <b>Baifeng's the correponding-authored paper on clonal evolution</b> <a href='https://www.nature.com/articles/s41467-019-09241-7'>is published in Nature Communications</a>! <img src='/images/newspic/2news.png' class='img-responsive' style='max-width: 192px' />"  
+  headline: "Congratulation! <b>Baifeng's the corresponding-authored paper on clonal evolution</b> <a href='https://www.nature.com/articles/s41467-019-09241-7'>is published in Nature Communications</a>! <img src='/images/newspic/2news.png' class='img-responsive' style='max-width: 192px' />"  
 
 - date : 07-09. November 2018
   headline: "Baifeng is invited to give a short talk on <b>SplitFusion software</b> in <a href='http://ias.ust.hk/events/201811nttag/'>New Technologies and Translational Applications in Genomics international conference hosted by HKUST IAS (November 7-9)</a>"
