--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
-- date: 14. August 2023
-  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Targeting MFGE8 secreted by cancer-associated fibroblasts blocks angiogenesis and metastasis in esophageal squamous cell carcinoma</b> <a href=''>is accepted by PNAS</a>!"
+- date: 10. October 2023
+  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Targeting MFGE8 secreted by cancer-associated fibroblasts blocks angiogenesis and metastasis in esophageal squamous cell carcinoma</b> <a href='https://doi.org/10.1073/pnas.2307914120'>is accepted by PNAS</a>!"
 
 - date : 14-16. June 2023
   headline: "Baifeng is invited to give a short talk on <b>Metastatic microenvironment of ESCC</b> in <a href='http://ias.ust.hk/events/202306bam/program.php'>IAS International Workshop on Biological data science, AI & Medicine (BAM workshop) hosted by HKUST IAS (June 14-16)</a>"
