--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,9 @@
 - date: 21. October 2024
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled QSOX1 facilitates dormant esophageal cancer stem cells to evade immune elimination via PD-L1 upregulation and CD8 T cell exclusion</b> <a href='https://doi.org/10.1073/pnas.2407506121'>is published in PNAS</a>!"
 
+- date: 02. August 2024
+  headline: "<b>Congratulation to Dr. Baifeng Zhang on his successful PhD denfense</b>!"
+
 - date: 10. October 2023
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Targeting MFGE8 secreted by cancer-associated fibroblasts blocks angiogenesis and metastasis in esophageal squamous cell carcinoma</b> <a href='https://doi.org/10.1073/pnas.2307914120'>is published in PNAS</a>!"
 
