--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 17. November 2024
+  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled GPRC5A promotes lung colonization of esophageal squamous cell carcinoma</b> <a href='https://doi.org/10.1038/s41467-024-54251-9'>is published in Nature Communications</a>!"
+
 - date: 21. October 2024
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled QSOX1 facilitates dormant esophageal cancer stem cells to evade immune elimination via PD-L1 upregulation and CD8 T cell exclusion</b> <a href='https://doi.org/10.1073/pnas.2407506121'>is published in PNAS</a>!"
 
