--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 14. February 2025
+  headline: "Valentine's Day Gifts! <b>Baifeng's the co-first authored paper entitled SplitFusion enables ultrasensitive gene fusion detection and reveals fusion variant-associated tumor heterogeneity</b> <a href='https://doi.org/10.1016/j.patter.2025.101174'>is published in Patterns</a>!"
+
 - date: 17. November 2024
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled GPRC5A promotes lung colonization of esophageal squamous cell carcinoma</b> <a href='https://doi.org/10.1038/s41467-024-54251-9'>is published in Nature Communications</a>!"
 
