--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 17. February 2025
+  headline: "<b>Congratulations to Dr. Baifeng Zhang on joining MD Anderson Cancer Center as a Postdoctoral Fellow! With a steadfast commitment to a singular goal: Making Cancer History!</b>!"
+
 - date: 14. February 2025
   headline: "Valentine's Day Gifts! <b>Baifeng's the co-first authored paper entitled SplitFusion enables ultrasensitive gene fusion detection and reveals fusion variant-associated tumor heterogeneity</b> <a href='https://doi.org/10.1016/j.patter.2025.101174'>is published in Patterns</a>!"
 
