--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -3,7 +3,7 @@
   info: PhD, August 2024
   email: zhangbaifeng1@gmail.com
   number_educ: 5
-  education1: Postdoctoral Fellow with <a href="https://faculty.mdanderson.org/profiles/linghua_wang.html">Prof. Linghua Wang</a>
+  education1: Postdoctoral Fellow with <a href="https://faculty.mdanderson.org/profiles/linghua_wang.html">Prof. Linghua Wang</a> at Department of Genomic Medicine, Division of Cancer Medicine, MD Anderson Cancer Center
   education2: PhD with <a href="https://hub.hku.hk/cris/rp/rp00454">Prof. Xinyuan Guan (academical)</a> and <a href="https://hub.hku.hk/cris/rp/rp00414">Prof. Dora Lai-wan KWONG (clinical)</a> at Department of Clinical Oncology, SClinMed, HKUMed
   education3: Research Assistant with <a href="https://ki.se/en/research/zongli-zheng/">Zongli Zheng</a> at Karonlinska Institutet
   education4: Bioinformatics Engineer with <a href="https://www.bgi.com/global/">Xiaodong Fang</a> and <a href="https://www.researchgate.net/profile/Xiangchun_Li">Xiangchun Li</a>
