--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 06. March 2025
+  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled FAO-Fueled OXPHOS and NRF2-Mediated Stress Resilience in MICs Drive Lymph Node Metastasis</b> <a href=''>is accepted by PNAS</a>!"
+
 - date: 17. February 2025
   headline: "<b>Congratulations to Dr. Baifeng Zhang on joining MD Anderson Cancer Center as a Postdoctoral Fellow! With a steadfast commitment to a singular goal: Making Cancer History!</b>!"
 
