--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 13. January 2026
+  headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled Multi-omics Identifies a Cholesterol-TFEB-PLD3-TLR9 Axis Driving Immunosuppressive TAMs Polarization in ESCC</b> <a href='https://www.pnas.org/doi/10.1073/pnas.2520427123'>is published in PNAS</a>!"
+
 - date: 11. April 2025
   headline: "Congratulation! <b>Baifeng's the co-first authored paper entitled FAO-Fueled OXPHOS and NRF2-Mediated Stress Resilience in MICs Drive Lymph Node Metastasis</b> <a href='https://doi.org/10.1073/pnas.2411241122'>is published in PNAS</a>!"
 
